<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.samsung.smartintercom.InfoActivity">

    <ImageButton
        android:id="@+id/button_take_photo"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:onClick="onRetryImageClc"
        app:layout_constraintBottom_toBottomOf="@+id/image_intercom"
        app:layout_constraintEnd_toEndOf="@+id/button_retry"
        app:layout_constraintStart_toEndOf="@+id/image_intercom"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/your_inter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="19dp"
        android:onClick="onSettClc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="191dp"
        android:text="@string/model_n"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_intercom_model"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="24dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/button_retry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onRetryClc"
        app:layout_constraintBottom_toBottomOf="@+id/text_intercom_model"
        app:layout_constraintEnd_toEndOf="@+id/settingsButton"
        app:layout_constraintStart_toEndOf="@+id/text_intercom_model"
        app:layout_constraintTop_toTopOf="@+id/text_intercom_model"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="285dp"
        android:text="@string/photo_int"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_intercom"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/image_intercom"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:onClick="onHistClc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <ImageView
        android:id="@+id/image_intercom"
        android:layout_width="0dp"
        android:layout_height="285dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_intercom_model"
        app:layout_constraintStart_toStartOf="@+id/text_intercom_model"
        app:srcCompat="@android:drawable/alert_dark_frame" />

</androidx.constraintlayout.widget.ConstraintLayout>